--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@ An \emph{indistiguishability obfuscator} is a probabilistic polynomial-time algo
 \tableofcontents
 \clearpage
 \pagenumbering{arabic}
-\setcounter{page}{1}
+%\setcounter{page}{1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Section Introduction
