--- a/BuildingQiO-non-clifford.tex
+++ b/BuildingQiO-non-clifford.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Obfuscating Beyond Clifford Circuits}
 \label{QiO:Clifford+T:family}
-In the previous section, we showed how we can construct a $Qi\mathcal{O}$ for Clifford circuits from gate-teleportation and $i\mathcal{O}.$ In this section, we extend the gate teleportation technique to show how we can construct $Qi\mathcal{O}$ for any quantum circuit that has at most logarithmic non-Clifford-gates in the circuit size.  We start by constructing a $Qi\mathcal{O}$ for any 1-qubit quantum circuit (\cref{QiO:Clifford+T:family+GT}), then in \Cref{sec:n-qubit-circuits}  we extend the 1-qubit construction to any $n$-qubit quantum circuit that has at most a logarithmic number of  $\tgate$ gates in the circuit size.\footnote{Recall from  \Cref{defn:Clifford+T:family} that adding a non-Clifford gate  such as $\tgate$ gate to Clifford gates gives us a generating set for all unitary quantum circuits.}
+In the previous section, we showed how we can construct a $Qi\mathcal{O}$ for Clifford circuits from gate-teleportation and $i\mathcal{O}.$ In this section, we extend the gate teleportation technique to show how we can construct $Qi\mathcal{O}$ for any quantum circuit that has at most a logarithmic number of non-Clifford-gates in the circuit size.  We start by constructing a $Qi\mathcal{O}$ for any 1-qubit quantum circuit (\cref{QiO:Clifford+T:family+GT}), then in \Cref{sec:n-qubit-circuits}  we extend the 1-qubit construction to any $n$-qubit quantum circuit that has at most a logarithmic number of  $\tgate$ gates in the circuit size.\footnote{Recall from  \Cref{defn:Clifford+T:family} that adding a non-Clifford gate  such as $\tgate$ gate to Clifford gates gives us a generating set for all unitary quantum circuits.}
 
 
 
@@ -45,7 +45,7 @@ where $\alpha_j \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\},$ for  $j\in
 
 Let $C_q$ be a $1$-qubit circuit we want to obfuscate and $\ket{\psi}$ be the quantum state on which we want to evaluate $C_q.$ Note we can write any $1$-qubit circuit as a sequence of gates from the set $\{\hgate, \tgate\}$ \footnote{The set $\{\hgate,  \tgate\}$ is universal for 1-qubit unitary \cite{KLM07}.}
 
-$$C_q=(g_{|C_q|},\ldots,g_2,g_1 ),\; g_i\in\{\hgate, \tgate\}$$
+$$C_q=(g_{|C_q|},\ldots,g_2,g_1 ),\; g_i\in\{\hgate, \tgate\}\,.$$
 Recall that in the gate-teleportation protocol, we are left with a subsystem of the form $C_q \xgate^b\zgate^a (\ket{\psi})$ (\Cref{protocol: gate-teleportation})
 
 \begin{equation}
@@ -53,7 +53,6 @@ Recall that in the gate-teleportation protocol, we are left with a subsystem of 
 C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2,g_1 )\xgate^b\zgate^a (\ket{\psi}),
 \end{equation}
 and to evaluate the circuit on $\ket{\psi}$, we have to apply a correction unitary. We can write the system in \Cref{eq:pgate4} as
-
 \begin{equation}
 \begin{aligned}
 \label{eq:pgate5}
@@ -69,14 +68,13 @@ C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2)(\alpha_0 \igate +  \alp
 %\end{cases}
 %\end{equation}
 %where $\alpha_2^\prime=\alpha_2(1-i)/2+\alpha_3(1+i)/2$ and $\alpha_3^\prime=\alpha_3(1-i)/2+\alpha_2(1+i)/2$ for $i\in[4].$ Note that in the expression above, the coefficients may change if $g_2$ happens to be a $\tgate$-gate;  whereas if $g_2$ is an $\hgate$-gate then the size of the coefficients remains unaffected. Moreover, applying any number of gates to a system as in  \Cref{eq:pgate3} cannot increase the number of terms, \emph{i.e.}, the number of terms in the summation remains at most~4. However, the size of coefficients $\alpha_i$ can be changed with each application of a $\tgate$-gate.
-
 \begin{equation}
 \begin{aligned}
 \label{eq:pgate8}
 C_q \xgate^b\zgate^a (\ket{\psi})=(\beta_0 \igate +  \beta_1 \xgate + \beta_2 \zgate + \beta_3\xgate \zgate)(g_{|C_q|},\ldots,g_2,g_1 )(\ket{\psi})
 \end{aligned}
 \end{equation}
-where each $\beta_i\in\mathbb{C}$  and is computed by multiplying and adding numbers from the set $\{\frac{1+i}{2},\frac{1-i}{2}\}.$ It is discussed in (\Cref{coeff:size}) that the size of the coefficients $\beta_i$'s grows at most a polynomial in the number of $\tgate$ gates. It follows from  \Cref{eq:pgate8} that the correction unitary for any 1-qubit quantum circuit can be written as 
+where each $\beta_i\in\mathbb{C}$  and is computed by multiplying and adding numbers from the set $\{\frac{1+i}{2},\frac{1-i}{2}\}.$ It is discussed in (\Cref{coeff:size}) that the size of the coefficients $\beta_i$'s grows at most as a polynomial in the number of $\tgate$ gates. It follows from  \Cref{eq:pgate8} that the correction unitary for any 1-qubit quantum circuit can be written as
 
 %Anne{above is a lot of fluff to say that the Paulis form a basis!}
 \begin{equation}
@@ -90,7 +88,7 @@ Therefore the update function for any $1$-qubit circuit $C_q$ can be defined as 
 F_{C_q}:\{0,1\}^2\rightarrow \mathbb{C}^4,\; (a,b)\mapsto (\beta_0, \beta_1,\beta_2,\beta_3),
 \end{equation*}
 which corresponds to the correction unitary $(\beta_0 \igate +  \beta_1 \xgate + \beta_2 \zgate + \beta_3\xgate \zgate).$
-The construction for  1-qubit circuits is nearly identical to the gate teleportation construction for Clifford circuits (\Cref{sec:Clifford-iO-teleportaion}). The proof that the 1-qubit construction is a $Qi\mathcal{O},$ is also very similar to the proof for the Clifford construction (\Cref{sec:Clifford-iO-teleportaion}). All we have to show is that the update functions for two equivalent 1-qubit circuits are equal. This is proved in  \Cref{lemma:1qubit}. 
+The construction for  1-qubit circuits is nearly identical to the gate teleportation scheme for Clifford circuits (\Cref{sec:Clifford-iO-teleportaion}). The proof that the 1-qubit construction is a $Qi\mathcal{O},$ is also very similar to the proof for the Clifford construction (\Cref{sec:Clifford-iO-teleportaion}). All we have to show is that the update functions for two equivalent 1-qubit circuits are equal. This is proved in  \Cref{lemma:1qubit}.
 
 %Moreover, the update functions for any two equivalent 1-qubit circuit are equivalent (see \Cref{lemma:1qubit}). Therefore, we can obfuscate any 1-qubit circuit using gate teleportation and a quantum secure $i\mathcal{O}$ as we did for the Clifford circuits (\Cref{sec:Clifford-iO-teleportaion}). The proof is nearly identical to the gate teleportation based Clifford construction (\Cref{sec:Clifford-iO-teleportaion}).
 %\Anne{Need to introduce next Lemma. Is the above sentence doing this? If so, be more direct.}
@@ -201,7 +199,7 @@ Let $C_q$ be an $n$-qubit circuit and $\ket{\psi}$ be an $n$-qubit state. If we 
 C_qU(\ket{\psi})= U^\prime C_q (\xgate^{a_{1}}\zgate^{b_{1}}\otimes \xgate^{a_{2}}\zgate^{b_{2}}\otimes \cdots \otimes \xgate^{a_{n}}\zgate^{b_{n}})(\ket{\psi}).
 \end{equation}
 
-Let us construct $U^\prime$ and estimate how big it can grow. Suppose there are $k\leq n$ number of $\tgate$ gates in $C_q$ for some non-negative integer $k\leq n.$ To simplify the analysis, we assume that $\tgate$ gates are in the first $l$ wires of $C_q.$  \footnote{This restriction will not not affect our analysis see remark \cref{remark:nqubit-correction1}.} Note we must have $l\leq k.$ Then for every $j$-th wire with $\tgate$ gate(s) %\Anne{need to discuss the assumptions about the CNOT position. IS this the right way to say it, or would it be better to simply argue that only the $T$ gate causes issues, so we ignore all the other gates?}
+Let us construct $U^\prime$ and estimate how big it can grow. Suppose there are $k\leq n$ number of $\tgate$ gates in $C_q$ for some non-negative integer $k\leq n.$ To simplify the analysis, we assume that $\tgate$ gates are in the first $l$ wires of $C_q$\footnote{This restriction will not not affect our analysis see remark \cref{remark:nqubit-correction1}.}. Note we must have $l\leq k.$ Then for every $j$-th wire with $\tgate$ gate(s) %\Anne{need to discuss the assumptions about the CNOT position. IS this the right way to say it, or would it be better to simply argue that only the $T$ gate causes issues, so we ignore all the other gates?}
 
 \begin{equation}
 \begin{aligned}
@@ -218,7 +216,7 @@ where $\lambda_{j_i}\in\mathbb{C}, $  $a_{i}^\prime, b_{i}^\prime \in\{0,1\}$ fo
  C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}\ket{\psi}= \left(\sum_{i=1}^4 \lambda_{j_i} \xgate^{a_{i}^\prime}\zgate^{b_{i}^\prime}\right)^{\otimes_{i=1}^{l}} \otimes \left(\xgate^{a_{i}^\prime}\zgate^{b_{i}^\prime}\right)^{\otimes_{i=l+1}^{n}}\\
 \end{aligned}
 \end{equation}
-After expanding the relation \Cref{nqubit:eq8} using the identity $(A+B)\otimes C=A\otimes C + B\otimes C$.\footnote{We have expand the expression, in case if $\cnot$ acts on the wires that has $\tgate$ gates.} %\Anne{i don't understand this.}
+After expanding the relation \Cref{nqubit:eq8} using the identity $(A+B)\otimes C=A\otimes C + B\otimes C$.\footnote{We have expand the expression, assuming the worst case, that~$\cnot$ acts on the wires that has $\tgate$ gates.} %\Anne{i don't understand this.}
 
 
 \begin{equation}
@@ -243,7 +241,7 @@ Therefore, we define an update function for any $n$-qubit quantum circuit $C_q$ 
 Which corresponds to the correction unitary defined in \Cref{exp:nqubit-correction}.
 \subsubsection{Remark}
 \label{remark:nqubit-correction1}
-Note the restriction that $\tgate$ gates are in the first $l$ wires of the circuit has no affect on our analysis. This is because, any permutation of the wires in the circuit will give us $\ell$ terms of form $\sum_{i=1}^4 \lambda_{j_i} \xgate^{a_{j_i}^\prime} \zgate^{b_{j_i}^\prime}$ and $n-l$ terms of the form $\xgate^{a_{i}^\prime} \zgate^{b_{i}^\prime}.$  And the tensor product of these terms in any order will result into a unitary in the worst-case of form. Moreover, $\cnot$ does not increase the number of terms in the update function or affect the size of the coefficients, but force us to expand the expression. Therefore, our worst-case analysis is not affected by this restriction.
+Note the restriction that $\tgate$ gates are in the first $l$ wires of the circuit has no affect on our analysis. This is because, any permutation of the wires in the circuit will give us $l$ terms of form $\sum_{i=1}^4 \lambda_{j_i} \xgate^{a_{j_i}^\prime} \zgate^{b_{j_i}^\prime}$ and $n-l$ terms of the form $\xgate^{a_{i}^\prime} \zgate^{b_{i}^\prime}.$  And the tensor product of these terms in any order will result in a unitary in the worst-case of the given form. Moreover, $\cnot$ does not increase the number of terms in the update function or affect the size of the coefficients, but forces us to expand the expression. Therefore, our worst-case analysis is not affected by this restriction.
 
 
 \subsubsection{Analysis}
@@ -253,7 +251,7 @@ The $Qi\mathcal{O}$ construction and proof of its security is identical to the  
 \item For any two equivalent quantum circuits $C_{q_1}$ and $C_{q_2}$ the corresponding update functions are equal $F_{C_{q_1}}=F_{C_{q_2}}.$
 \item The update function can be computed by classical circuit of size $poly(|C_q|).$
 \end{enumerate}
-The first property is proved in \Cref{lemma:nqubit} and the second is proved in \Cref{property2}. 
+The first property is proved in \Cref{lemma:nqubit} and the second is proved in \Cref{property2}.
 %
 %\begin{equation}
 %\label{nqubit-correction-final}
@@ -324,7 +322,7 @@ Let $C_1$ and $C_2$ be circuits that compute $F_{C_{q_1}}$ and $F_{C_{q_2}}$ res
 C_1({\bf s)}=((\beta_1, {\bf s}_1),\ldots, (\beta_n, {\bf s}_n))\neq ((\beta_1^\prime, {\bf s}_1^\prime),\ldots, (\beta_n^\prime, {\bf s}_n^\prime))=C_2({\bf s})
 \end{equation}
 
-Suppose we evaluated circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using gate teleportaton (\Cref{protocol: gate-teleportation}), and further assume that the classical output of the Bell measurement (\Cref{protocol: gate-teleportation}, step 4) for both circuits is the same string ${\bf s}.$ After step 5 of gate teleportation protocol (\Cref{protocol: gate-teleportation}) we are left with the following systems
+Suppose we evaluated circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using gate teleportaton (\Cref{protocol: gate-teleportation}), and further assume that the classical output of the Bell measurement (\Cref{protocol: gate-teleportation}, step 4) for both circuits is the same string ${\bf s}.$ After step 5 of the gate teleportation protocol (\Cref{protocol: gate-teleportation}) we are left with the following systems
  \begin{equation*}
 C_{q_1} (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}\ket{\psi} \;\mbox{ and }\;
 C_{q_2} (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}\ket{\psi}
@@ -365,7 +363,7 @@ From \Cref{nqubit:eq14} we can conclude that $(\beta_i, {\bf s}_i)=(\beta_i^\pri
 
 \subsection{Cost of Computing the Update Function}
 \label{property2}
-We have to show that the update function can be computed by a polynomially size classical circuit. Let $C_q $ be an $n$-qubit circuit  with $k\in O(\log(|C_q|)).$
+We have to show that the update function can be computed by a polynomial-size classical circuit. Let $C_q $ be an $n$-qubit circuit  with $k\in O(\log(|C_q|)).$
 \begin{equation*}
 F_{C_q}(s)=((\beta_1, {\bf s}_1),\ldots, (\beta_k, {\bf s}_k)),\; \mbox{for } s\in\{0,1\}^{2n}.
  \end{equation*}
